# Product-Material-Footprint

./: .gitignore  LICENSE  README.md  pyproject.toml
CFs/characterization_factors_3.10/: agrar_rmi.csv  fossil_tmr.csv  metal_rmi.csv  mineral_rmi.csv
CFs/characterization_factors_3.10_EN15804/: fossil_rmi.csv  metal_rmi.csv  metal_tmr.csv  mineral_rmi.csv  mineral_tmr.csv
CFs/characterization_factors_3.11/: agrar_rmi.csv  mineral_rmi.csv
CFs/characterization_factors_3.9.1/: aquatic_tmr.csv  mineral_rmi.csv
CFs/characterization_factors_raw/: agrar_rmi.csv  aquatic_rmi.csv  fossil_rmi.csv
brightway/: create_PMF_Method_direct.ipynb  create_PMF_Method_viacf.ipynb
comparison DPMF - CFPMF/: PMF_mapping.xlsx  compare_DPMF_CFPMF.ipynb
openLCA/: README.md  README.txt  create_PMF_Method_viacf.py
src/product_material_footprint/brightway/: README.md  method.py  status.py
src/product_material_footprint/characterization_factors/: PMF_CF abotic and CF biotic_27.01.2025.xlsx
src/product_material_footprint/characterization_factors/characterization_factors_3.10/: agrar_tmr.csv  fossil_rmi.csv  metal_tmr.csv
src/product_material_footprint/characterization_factors/characterization_factors_3.10_EN15804/: forest_rmi.csv  forest_tmr.csv  fossil_tmr.csv
src/product_material_footprint/characterization_factors/characterization_factors_3.11/: agrar_tmr.csv  fossil_rmi.csv  fossil_tmr.csv  mineral_tmr.csv
src/product_material_footprint/characterization_factors/characterization_factors_3.9.1/: aquatic_rmi.csv  fossil_rmi.csv  fossil_tmr.csv  mineral_tmr.csv
(+7 files in other folders)
