[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-material-footprint"
version = "0.1.0"
description = "Creates the method for the Product Material Footprint in ecoinvent."
readme = {text = "Product Material Footprint package.", content-type = "text/plain"}
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pandas>=2.0",
    "scipy==1.16.3",
]

[project.optional-dependencies]
brightway = [
    "bw2data",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
product_material_footprint = [
    "characterization_factors/*.xlsx",
    "characterization_factors/**/*.csv",
    "openlca/*.txt",
]
